exports[`test The PageWrapper component displays the given children. 1`] = `
<div>
  <header
    style={
      Object {
        "backgroundColor": "black",
        "height": 150,
        "width": "100%",
      }
    }>
    <h1
      style={
        Object {
          "color": "white",
          "left": 10,
          "position": "absolute",
          "top": 10,
        }
      }>
      React Stack Skeleton
    </h1>
    <div
      style={
        Object {
          "position": "absolute",
          "right": 10,
          "top": 10,
        }
      }>
      <nav>
        <ul
          style={
            Object {
              "listStyleType": "none",
            }
          } />
      </nav>
    </div>
  </header>
  <div>
    <div>
      Test child
    </div>
  </div>
</div>
`;

exports[`test The PageWrapper component displays the given navigation items. 1`] = `
<div>
  <header
    style={
      Object {
        "backgroundColor": "black",
        "height": 150,
        "width": "100%",
      }
    }>
    <h1
      style={
        Object {
          "color": "white",
          "left": 10,
          "position": "absolute",
          "top": 10,
        }
      }>
      React Stack Skeleton
    </h1>
    <div
      style={
        Object {
          "position": "absolute",
          "right": 10,
          "top": 10,
        }
      }>
      <nav>
        <ul
          style={
            Object {
              "listStyleType": "none",
            }
          }>
          <li
            style={
              Object {
                "float": "left",
                "marginLeft": 25,
                "width": 100,
              }
            }>
            <a
              onClick={[Function]}
              style={Object {}}>
              Home
            </a>
          </li>
          <li
            style={
              Object {
                "float": "left",
                "marginLeft": 25,
                "width": 100,
              }
            }>
            <a
              onClick={[Function]}
              style={Object {}}>
              Internal Link
            </a>
          </li>
          <li
            style={
              Object {
                "float": "left",
                "marginLeft": 25,
                "width": 100,
              }
            }>
            <a
              href="https://google.com">
              External Link
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </header>
  <div />
</div>
`;
